unpackaged/main/default/objects/Cows_Housing__c/Cows_Housing__c.object-meta.xml
<CustomObject>
    <label>Cows Housing</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Cows Housing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cows Housings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>