unpackaged/main/default/objects/Cows_Housing__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mats</fullName>
            </value>
            <value>
                <fullName>Mattresses</fullName>
            </value>
            <value>
                <fullName>Deep bedded</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>