unpackaged/main/default/objects/Cows_Housing__c/fields/Base_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Base_Other_Text__c</fullName>
    <label>Base Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>