unpackaged/main/default/objects/Cows_Housing__c/fields/Bedding__c.field-meta.xml
<CustomField>
    <fullName>Bedding__c</fullName>
    <label>Bedding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straw</fullName>
            </value>
            <value>
                <fullName>Sawdust</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>