unpackaged/main/default/objects/Cows_Housing__c/fields/Bedding_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Bedding_Other_Text__c</fullName>
    <label>Bedding Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>