unpackaged/main/default/objects/Cows_Housing__c/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cubicles</fullName>
            </value>
            <value>
                <fullName>Kennels</fullName>
            </value>
            <value>
                <fullName>Deep litter yar</fullName>
                <label>Deep litter yard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>