unpackaged/main/default/objects/Cows_Housing__c/fields/WOADairy__c.field-meta.xml
<CustomField>
    <fullName>WOADairy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOADairy</label>
    <referenceTo>WOADairy__c</referenceTo>
    <relationshipLabel>Cows Housings</relationshipLabel>
    <relationshipName>Cows_Housings</relationshipName>
    <type>Lookup</type>
</CustomField>