unpackaged/main/default/objects/Cows_Housing__c/recordTypes/Dry.recordType-meta.xml
<RecordType>
    <fullName>Dry</fullName>
    <active>true</active>
    <label>Dry</label>
</RecordType>