unpackaged/main/default/objects/Cows_Housing__c/recordTypes/Milking.recordType-meta.xml
<RecordType>
    <fullName>Milking</fullName>
    <active>true</active>
    <label>Milking</label>
</RecordType>